test/fail/int_unpack_enumset00.v3
//@execute 0=9; 1=9; 2=9; 3=9
// BUG: iN.unpack<E.set> silently returns the EMPTY set unless the container
// width N is exactly the enum set's width. pack is correct in every width:
//   u8.pack<E.set>(E.A | E.D)          == 9   (correct)
//   u8.unpack<E.set>(9)                == {}  (WRONG, expected {A,D})
//   u4.unpack<E.set>(9)                == {A,D} (correct; u4 is the exact width)
// Silent data loss, not a crash. Affects the interpreter and native codegen
// alike. Any data type or tuple containing an E.set alongside other fields is
// affected, since the container is then wider than the set.
// Likely SsaUnpacker.unpack0()'s EnumSetType branch mishandles the view/shift
// from the container type down to E.set's repType.
enum E { A, B, C, D }
def w4(s: E.set) -> E.set { return u4.unpack<E.set>(u4.pack<E.set>(s)); }
def w5(s: E.set) -> E.set { return u5.unpack<E.set>(u5.pack<E.set>(s)); }
def w8(s: E.set) -> E.set { return u8.unpack<E.set>(u8.pack<E.set>(s)); }
def w32(s: E.set) -> E.set { return u32.unpack<E.set>(u32.pack<E.set>(s)); }
def main(a: int) -> int {
	def s = E.A | E.D;
	match (a) {
		0 => return int.view(u4.pack<E.set>(w4(s)));    // passes today
		1 => return int.view(u4.pack<E.set>(w5(s)));
		2 => return int.view(u4.pack<E.set>(w8(s)));
		3 => return int.view(u4.pack<E.set>(w32(s)));
		_ => return -1;
	}
}
